--- a/pytest.ini
+++ b/pytest.ini
@@ -7,5 +7,6 @@ python_classes = Test*
 python_functions = test_*
 
 markers =
-    smoke: smoke testing
-    regression: regression testing
+    p0 : Highest priority test cases (Smoke tests)
+    p1 : High priority test cases
+    p2 : Medium priority test cases, for regression testing
